feat: implement core application structure with TypeScript and Express, including models, services, and middleware feat: add environment variable management and MongoDB connection setup feat: create authentication service with registration and account retrieval functionality feat: implement encryption and decryption utilities for sensitive data feat: add logging and error handling middleware for improved request tracking and error management feat: define interfaces and types for account and card models chore: update package dependencies and add type definitions for Express and CORS

--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "finable-server": "file:",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "nanoid": "^5.1.5",
     "rimraf": "^6.0.1",
     "winston": "^3.17.0",
     "zod": "^3.24.4"
