feat: refactor server setup and enhance authentication flow
- Updated package.json to replace nodemon with ts-node-dev for improved TypeScript support during development.
- Integrated cookie-parser middleware for handling cookies in the application.
- Created AccountController to manage user registration, login, and logout functionalities.
- Implemented user registration with session management and error handling in AuthService.
- Enhanced Account and Card models with encryption and decryption for sensitive fields.
- Established a new router structure for authentication routes.
- Improved logging middleware to include status indicators in logs.
- Added constants for cookie management in the configuration.
- Removed accountNumber from the card interface as it is no longer needed.
- Updated TypeScript configuration to exclude node_modules from compilation.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,14 +20,16 @@
   },
   "homepage": "https://github.com/John-keno/Finable-Server#readme",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
